style(prop-config-man-parent): improve the code style